--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">StockApp</string>
     <string name="login">Login</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_wishlist">Wishlist</string>
+    <string name="menu_profile">Profile</string>
 </resources>
