--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="stocks_live_tracking_api_hit">Stocks live tracking API Hit</string>
     <string name="stock_favorite_success_msg">Saved in Favorite Successfully</string>
     <string name="stock_favorite_error_msg">Try Later,stock could not saved in Favorite Successfully</string>
+    <string name="sign_in_error">Error while signin</string>
 </resources>
